--- a/Paper/Reproduce/figure_3.ipynb
+++ b/Paper/Reproduce/figure_3.ipynb
@@ -1,51 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "4e1a1a37",
-   "metadata": {},
-   "source": [
-    "To reproduce the data for this figure you have to use the following script for $x\\in\\{1, 3.04438, 5\\}$ and for d $\\in\\{\\text{'None'}, \\text{'f32'}, \\text{'f16'}, \\text{'bf16'}\\}$: \n",
-    "\n",
-    "Train the ResCNNs: \\\n",
-    "Script/LPSO/energy_minimization.py \\\n",
-    "    --n_dim=2 \\\n",
-    "    --lr=5e-3 \\\n",
-    "    --n_chains=\\$((2\\**10)) \\\n",
-    "    --n_samples=\\$((2\\**12)) \\\n",
-    "    --M=1000 \\\n",
-    "    --save_parameters=True \\\n",
-    "    --save_history=True \\\n",
-    "    --timeit=True \\\n",
-    "    --sampling_dtype=d \\\n",
-    "    --L=10 \\\n",
-    "    --model='TFIM' \\\n",
-    "    --model_params='{\"J\": 1, \"h\": x}' \\\n",
-    "    --chunk_size=\\$((2\\**11)) \\\n",
-    "    --arch='ResCNN' \\\n",
-    "    --arch_params='{\"n_res_blocks\": 4, \"filters\": 16, \"kernel_shape\": (3,3), \"upcast_sums\": False}'\n",
-    "\n",
-    "\n",
-    "Then you can use the following notebook to plot the data."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "556b3007",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "\n",
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath('../..'))\n",
     "from project_paths import PROJECT_ROOT\n",
     "from file_handler import HistoryHandler\n",
-    "from functions import compute_RE, get_timing_info\n",
+    "from functions import get_timing_info\n",
     "from Paper.figure_scripts import common"
    ]
   },
