--- a/Paper/figure_scripts/phase_transition_opt.ipynb
+++ b/Paper/figure_scripts/phase_transition_opt.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "618cbdda",
    "metadata": {},
    "outputs": [
@@ -122,6 +122,7 @@
    ],
    "source": [
     "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "# fig, axes = plt.subplots(2, 1, figsize=(11, 9))\n",
     "\n",
     "colors = plt.cm.viridis(np.linspace(0.2, 0.8, len(dtype_labels)))\n",
     "\n",
